[package]
name = "image_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = {version = "0.25.1", features = ["dds", "jpeg", "png"]}
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui-file-dialog = "0.5.0"
walkdir = "2.5.0"
image_dds = { version = "0.5.1", features = ["default"] }
strum = "0.26.2"
anyhow = "1.0.86"
pathdiff = "0.2.1"
rfd = "0.14.1"
log = "0.4.21"
